# sarp-east-toolkit

./: README.md  pyproject.toml
sarp_east_toolkit/: __init__.py  earthdata.py
tests/: test_all.py
