[tool.poetry]
name = "sarp-east-toolkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sarp_east_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
s3fs = "^2022.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
